# csv2iceberg

./: .gitignore  .replit  README.md  README_UPDATED.md  TESTING.md  app.py  cli_main.py  config_cli.py  config_manager.py  create_test_job.py  csv_to_iceberg.py  db_models.py  debug_s3tables.py  delete_line.txt  edit_line.txt  fix_routes.py  fix_test_job.py  hive_client.py  iceberg_writer.py  job_manager.py  lmdb_config_manager.py  lmdb_job_store.py  lmdb_stats.py  main.py  migrate_profiles.py  models.py  partition_utils.py  process_monitor.py  pyproject.toml  pyvenv.cfg  readme.txt  red-stapler-base64.txt  requirements-equivalent.txt  restructure.sh  run.py  run_full_tests.py  run_sqlbatcher_tests.sh  run_tests.py  sample_data.csv  schema_diff.py  (+6 more)
admin/: add_test_job.py
attached_assets/: Pasted-During-handling-of-the-above-exception-another-exception-occurred-Traceback-most-recent-call-las-1745528695014.txt  Pasted-ERROR-Error-during-conversion-Failed-to-check-if-table-exists-Failed-to-execute-query-TrinoUserE-1745388307508.txt  Pasted-ERROR-Error-during-conversion-Failed-to-check-if-table-exists-Failed-to-execute-query-TrinoUserE-1745391210782.txt  Pasted-Error-Failed-to-write-CSV-to-Iceberg-Failed-to-write-batch-to-Iceberg-Failed-to-execute-query-Tr-1745532235544.txt  Pasted-Error-executing-query-TrinoUserError-type-USER-ERROR-name-DUPLICATE-COLUMN-NAME-message-line-3-5-1745387250667.txt  Pasted-Error-executing-query-TrinoUserError-type-USER-ERROR-name-INVALID-CAST-ARGUMENT-message-Cannot-c-1745427848673.txt  Pasted-Error-executing-query-TrinoUserError-type-USER-ERROR-name-TYPE-MISMATCH-message-Insert-query-has-1745386198928.txt  Pasted-Error-executing-query-TrinoUserError-type-USER-ERROR-name-TYPE-MISMATCH-message-Insert-query-has-1745386742709.txt  Pasted-Error-executing-query-TrinoUserError-type-USER-ERROR-name-TYPE-MISMATCH-message-Insert-query-has-1745387558019.txt  Pasted-Error-executing-query-TrinoUserError-type-USER-ERROR-name-TYPE-MISMATCH-message-Insert-query-has-1745388637992.txt  Pasted-Error-executing-query-TrinoUserError-type-USER-ERROR-name-TYPE-MISMATCH-message-Insert-query-has-1745391411956.txt  Pasted-Error-writing-CSV-to-Iceberg-Failed-to-write-batch-to-Iceberg-Failed-to-execute-query-TrinoUserEr-1745388910842.txt  Pasted-INFO-werkzeug-198-18-240-120-24-Apr-2025-20-55-40-GET-convert-HTTP-1-1-200-INFO-csv-to-ic-1745528320105.txt  Pasted-Traceback-most-recent-call-last-File-usr-src-app-feature-branches-refactor-csv2iceberg-csv-to-1745529219217.txt  Pasted-WARNING-CSV-has-inconsistent-field-counts-24-fields-1-rows-33-fields-19-rows-35-fields-1-rows-1745391773482.txt  Pasted-WARNING-Inconsistent-field-count-line-1-has-24-fields-line-2-has-33-fields-WARNING-Inconsistent--1745384684232.txt  Pasted-WARNING-Inconsistent-field-count-line-1-has-24-fields-line-2-has-33-fields-WARNING-Inconsistent--1745384954494.txt  Pasted-jinja2-exceptions-UndefinedError-format-duration-is-undefined-Traceback-most-recent-call-last--1745527268148.txt  Pasted-rror-executing-query-TrinoUserError-type-USER-ERROR-name-INVALID-TABLE-PROPERTY-message-line-7-1-1745469590878.txt
cli/: __init__.py  commands.py
connectors/: iceberg_catalog.py  iceberg_metadata.py  iceberg_rest_client.py  s3_rest_client.py  (+4 more)
sql-batcher/: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
sql-batcher-package/: LICENSE  README.md  pyproject.toml
sql-batcher-package/src/sql_batcher/: batcher.py  query_collector.py
sql-batcher-package/src/sql_batcher/adapters/: __init__.py  trino.py
sql-batcher-package/tests/: test_batcher.py
sql-batcher/docs/source/: changelog.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  usage.rst
sql-batcher/docs/source/adapters/: custom.rst  generic.rst  index.rst  overview.rst  snowflake.rst  spark.rst  trino.rst
sql-batcher/docs/source/api/: adapters.rst  modules.rst  query_collector.rst  sql_batcher.rst
sql-batcher/docs/source/usage/: advanced.rst  basic.rst  cli.rst
sql-batcher/examples/: basic_usage.py  snowflake_example.py  spark_example.py  trino_example.py
sql-batcher/src/sql_batcher/: __init__.py  batcher.py  cli.py  query_collector.py
sql-batcher/src/sql_batcher/adapters/: __init__.py  base.py  generic.py  snowflake.py  spark.py  trino.py
sql-batcher/tests/: test_adapters.py  test_batcher.py
(+119 files in other folders)
