[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-batcher"
version = "0.1.0"
description = "Efficiently batch SQL statements based on size limits"
readme = "README.md"
authors = [
    {name = "SQL Batcher Team", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sql", "database", "trino", "spark", "snowflake", "batch", "query"]
dependencies = []
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=22.3",
    "flake8>=4.0",
    "mypy>=0.910",
]
trino = ["trino>=0.305"]
spark = ["pyspark>=3.0"]
snowflake = ["snowflake-connector-python>=2.7"]
all = ["trino>=0.305", "pyspark>=3.0", "snowflake-connector-python>=2.7"]

[project.urls]
"Homepage" = "https://github.com/example/sql-batcher"
"Bug Tracker" = "https://github.com/example/sql-batcher/issues"
"Documentation" = "https://sql-batcher.readthedocs.io"

[project.scripts]
sql-batcher = "sql_batcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sql_batcher" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=sql_batcher"

[tool.coverage.run]
source = ["sql_batcher"]